# bunifdef

./: README.md  default.nix  flake.nix  meson.build
.github/workflows/: check.yaml
docs/: bunifdef.md  meson.build
include/bunifdef/backend/: evaluator.hpp
include/bunifdef/frontend/: defs.hpp  driver.hpp  dumper.hpp  error.hpp  expr_expander.hpp  scanner.hpp  semantic_analyzer.hpp  source.hpp
include/bunifdef/frontend/ast/: ast_container.hpp  ast_copier.hpp  ast_nodes.hpp  node_identifier.hpp
include/bunifdef/frontend/ast/ast_nodes/: binary_expression.hpp  block.hpp  constant_expression.hpp  directive.hpp  error_node.hpp  i_ast_node.hpp  line.hpp  print_statement.hpp  unary_expression.hpp  variable_expression.hpp
src/: meson.build
src/backend/: evaluator.cpp  meson.build
src/frontend/: dumper.cc  expr_expander.cpp  meson.build  parser.y  scanner.l
test/: def-eq-zero.test  else.test  err-invalid-def.test  err-invalid-expression.test  err-unknown-def.test  err-unmached-if.test  expr-mult-minus.test  expr-mult-plus.test  ifdef.test  ifndef.test  ifs.test  lit.cfg.py  lit.site.cfg.py.in  meson.build  nested-ifs-negative.test  nested-ifs-selective-nodef.test  nested-ifs-selective-undef.test  nested-ifs-selective.test  nested-ifs.test  no-directives.test  selective-unknown-def.test
tools/: bunifdef.cpp  meson.build
